Kubernetes/sgbd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sgbd-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sgbd-d
  template:
    metadata:
      labels:
        app: sgbd-d
    spec:
      volumes:
      - name: sgbd-volume
        persistentVolumeClaim:
          claimName: sgbd-rvolume
      containers:
      - name: sgbd-p
        image: xabierland/sgbd:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: sgbd-volume
