Kubernetes/vault-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault-d
  template:
    metadata:
      labels:
        app: vault-d
    spec:
      volumes:
      - name: vault-volume
        persistentVolumeClaim:
          claimName: vault-rvolume
      containers:
      - name: vault-p
        image: xabierland/vault:latest
        ports:
        - containerPort: 8200
        volumeMounts:
        - mountPath: /vault/file
          name: vault-volume
