Kubernetes/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-d
  template:
    metadata:
      labels:
        app: web-d
    spec:
      volumes:
      - name: web-volume
        persistentVolumeClaim:
          claimName: web-rvolume
      containers:
      - name: web-p
        image: xabierland/web:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html/image
          name: web-volume
