Kubernetes/sgbd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sgbd
spec:
  type: ClusterIP
  selector:
    app: sgbd-d
  ports:
  - port: 5432
    targetPort: 5432
