Kubernetes/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
spec:
  type: ClusterIP
  selector:
    app: vault-d
  ports:
  - port: 80
    targetPort: 8200
