Kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ClusterIP
  selector:
    app: web-d
  ports:
  - port: 80
    targetPort: 80
